# NucleoMotorBoard

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_comm_test.cpp
.hg/: last-message.txt
.hg/store/: 00changelog.i  00manifest.i  fncache  undo  undo.phaseroots
ArduinoIOBoard/: IOBoard.ino  IOBoardComm.py  IOBoardGUI.py  SensorRosNode.py  default_port.conf  interface_acc.py
ArduinoIOBoard/IOBoardFirmware/: IOBoardFirmware.h  IOBoardFirmware.ino
Buffer/.hg/: dirstate
EdisonSerialCom/: BufferedSerial.lib
MotorCtrl/: MotorCtrl.cpp  MotorCtrl.h
MotorDriver/: MotorDriver.cpp  MotorDriver.h
NucleoMotorBoard/: interface.py  main.cpp
NucleoMotorBoard/MotorCtrl/: MotorCtrl.cpp
NucleoMotorBoard/SerialCom/: SerialCom.cpp  SerialCom.h  SerialParser.cpp
Prg_Central_full/: .gitignore  Metrics.cpp  Metrics.h  main.cpp  pid.lib
Prg_Central_full/.hg/: dirstate  undo.dirstate
Prg_Central_full/BufferedSerial/: BufferedSerial.cpp
Prg_Central_full/EdisonSerialCom/: SerialParser.cpp  SerialParser.h
Prg_Central_full/MotorCtrl/: MotorCtrl.cpp  MotorCtrl.h
Prg_Central_full/MotorDriver/: MotorDriver.h
Prg_Central_full/SerialCom/: SerialCom.cpp  SerialParser.h
Prg_Central_full/Trajectory/: Asserv.h  SpeedCommand.cpp
Prg_Central_full/USBSerialCom/: USBSerialCom.cpp  USBSerialCom.h
Prg_Central_full/pid/: pid.cpp  pid.h
QEI/: QEI.h
USBSerialCom/: USBSerialCom.cpp
codeEmbarque/: codeEmbarque.sln
codeEmbarque/afficheLED/: afficheLED.vcxproj  afficheLED.vcxproj.filters
codeEmbarque/carteMoteur/: carteMoteur.vcxproj  (+1 more)
nucleoF401re/: nucleoF401re.sln
(+69 files in other folders)
